--- a/admin-frontend/package.json
+++ b/admin-frontend/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "portfolio-frontend",
+  "name": "portfolio-admin-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@supabase/supabase-js": "^2.95.3",
     "axios": "^1.5.1",
-    "bcryptjs": "^3.0.3",
-    "jsonwebtoken": "^9.0.3",
-    "nodemailer": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.13.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.7"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -37,5 +32,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "ajv": "^8.17.1"
+  }
 }
